--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,9 +4,26 @@
     padding: 0;
     font-family: sans-serif;
 }
-body{
+/* body{
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+} */
+body {
+	background: linear-gradient(180deg, #0a23f2, #ff0016, #f300ff, #8f4ff4);
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
+}
+ 
+@keyframes gradient {
+	0% {
+		background-position: 50% 0%;
+	}
+	50% {
+		background-position: 50% 100%;
+	}
+	100% {
+		background-position: 50% 0%;
+	}
 }
 
 .main{
@@ -414,4 +431,95 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
         grid-template-columns: repeat(1, 1fr);
     }
 
+}
+
+
+.kcp {
+    height: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding-top: 300px;
+    
+  }
+  
+.icecream > .flavor {
+    position: relative;
+
+    width: 290px;
+    height: 360px;
+    
+    border-radius: 80px 80px 10px 10px;
+    overflow: hidden;
+    
+    &:after {
+    content: '';
+    
+    position: absolute;
+    left: 21px;
+    bottom: 20px;
+    
+    width: 20px;
+    height: 170px;
+    
+    border-radius: 50px;
+    background: rgba(255, 255, 255, 0.5);
+    
+    }
+    
+}
+
+.icecream > .flavor > .flavours {
+    position: relative;
+    top: 0%;
+    left: -20%;
+
+    width: 140%;
+    height: 120%;
+    
+    background-image: linear-gradient(0deg,
+    #f63a99 25%,
+    #30dcf6 25%,
+    #30dcf6 25%,
+    #30dcf6 50%,
+    #f2d200 50%,
+    #f2d200 50%,
+    #f2d200 75%,
+    #70ca5c 75%);
+    background-position: 0px 0px;
+    background-repeat: repeat-y;
+
+    animation: flavours 100s linear infinite;
+    transform: rotate(155deg);
+}
+  
+.icecream > .stick {
+width: 57px;
+height: 86px;
+
+background: #E09C5F;
+border-radius: 0 0 25px 25px;
+
+display: block;
+margin: 0 auto;
+
+&:after {
+    display: block;
+    content: '';
+
+    width: 100%;
+    height: 24px;
+    
+    background: #8D613B;
+    
+}
+
+}
+  
+@keyframes flavours {
+to {
+    background-position: 0 -1000vh;
+}
 }
